same size patches and font size reduction

--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -130,7 +130,7 @@
       							</select>
 									</div>
                 	<div class="col-md-6">
-										<input type="number" id="quantity"  min="1" placeholder="Qty." value ="Qty."/>
+										<input id="quantity"  min="1" placeholder="Qty." value ="Qty."/>
                 	</div>
                 </div>
                 <div class="form-group row">
