--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -130,7 +130,7 @@
       							</select>
 									</div>
                 	<div class="col-md-6">
-										<input id="quantity"  min="1" placeholder="Qty." value ="Qty."/>
+										<input id="quantity" type="number" min="1" placeholder="Qty." value ="Qty."/>
                 	</div>
                 </div>
                 <div class="form-group row">
@@ -147,7 +147,7 @@
 								<div class="form-group row">
                   <div class="col-md-12">
                   	<div id="sypSuccess"></div>
-                      <button id="sypSubmit" class="btn btn-primary2 btn-block" style="margin-bottom:25px;">Submit</button>
+                      <button id="sypSubmit" class="btn btn-primary2 btn-block" style="margin-top:18px;">Submit</button>
                   </div>
                 </div>
             </form>
