--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -31,7 +31,7 @@
 		background-color:#f1deff;
 		top: 10px;
 		padding: 10px 10px 20px 15px;
-		margin-left: 20px;
+		margin-left: 15px;
 		width:90%;
 	}
 }
@@ -94,7 +94,7 @@
 					<div class="row">
 						<div class="col-md-12" style="text-align:center;color : white;font-size: 50%;font-family:sans-serif;">
 					ACC | BIRLA SUPER  |  RAMCO  |  ZUARI  |  NAGARJUNA  |  PENNA <br>
-					PRIYA GOLD  |  JAYPEE  |  JSW  |  MANY MORE
+					PRIYA GOLD  |  JAYPEE | MANY MORE
 				</div>
 			</div>
 			</div>
@@ -111,43 +111,50 @@
                 <div class="form-group row">
                     <div class="col-md-12">
                         <input type="text" class="form-control" id="tmt-name" placeholder="Name*" required data-validation-required-message="Please
-												enter your name." style="margin-bottom:25px;">
+												enter your name." style="margin-bottom:15px;">
                     </div>
                 </div>
                 <div class="form-group row">
                   <div class="col-md-12">
-                    <input type="text" maxlength="10" style="margin-bottom:25px;" pattern="\d{10}" class="form-control" id="tmt-mobile" placeholder="Mobile*" required="required">
+                    <input type="text" maxlength="10" style="margin-bottom:15px;" pattern="\d{10}" class="form-control" id="tmt-mobile" placeholder="Mobile*" required="required">
                   </div>
                 </div>
                 <div class="form-group row">
-									<div class="col-md-6">
+									<div class="col-md-5 col-xs-6">
 										<select class="form-control" id="material">
 												<option value="" disabled selected style="display: none;">Material</option>
-								        <option>1</option>
-								        <option>2</option>
-								        <option>3</option>
-								        <option>4</option>
+								        <option>ACC</option>
+								        <option>BIRLA</option>
+								        <option>RAMCO</option>
+								        <option>ZUARI</option>
+												<option>NAGARJUNA</option>
+												<option>PENNA</option>
+												<option>PRIYA GOLD</option>
+												<option>JAYPEE</option>
       							</select>
 									</div>
-                	<div class="col-md-6">
-										<input id="quantity" type="number" min="1" placeholder="Qty." value ="Qty."/>
+                	<div class="col-md-4 col-xs-4" style="padding-left:0;padding-right:0;" align="left">
+										<input type="number" class="form-control" id="quantity" placeholder="1" min="1" style="float:right;width:80px;">
                 	</div>
+									<div class="col-md-3 col-xs-2" style="padding-left:0;" align="left">
+										<label for"weight" id="label" style="margin-top:8px;margin-left:2px;padding-left:-15px;float:left;">bags</label>
+								</div>
                 </div>
                 <div class="form-group row">
 									<div class="col-md-12">
-                    <input type="email" class="form-control" id="email" size="50" placeholder="Email" style="margin-top:25px;">
+                    <input type="email" class="form-control" id="email" size="50" placeholder="Email" style="margin-top:15px;">
                   </div>
                 </div>
 								<div class="form-group row">
                   <div class="col-md-12">
-                      <input type="text" class="form-control" id="locationTextField3" size="50" placeholder="Location" style="margin-top:25px;">
+                      <input type="text" class="form-control" id="locationTextField3" size="50" placeholder="Location" style="margin-top:15px;">
 											<input type="text" id="tmt-location" style="display:none">
                   </div>
                 </div>
 								<div class="form-group row">
                   <div class="col-md-12">
                   	<div id="sypSuccess"></div>
-                      <button id="sypSubmit" class="btn btn-primary2 btn-block" style="margin-top:18px;">Submit</button>
+                      <button id="sypSubmit" class="btn btn-primary2 btn-block" style="margin-top:15px;">Submit</button>
                   </div>
                 </div>
             </form>
@@ -194,8 +201,8 @@
 				<div class="col-md-12" style="text-align:center;color : white;font-size: 200%;font-family:sans-serif;font-weight:bold;"> OUR BRANDS<br>
 						<div class="row">
 							<div class="col-md-12" style="text-align:center;color : white;font-size: 50%;font-family:sans-serif;">
-						ACC | BIRLA SUPER  |  RAMCO  |  ZUARI  |  NAGARJUNA  |  PENNA <br>
-						PRIYA GOLD  |  JAYPEE  |  JSW  |  MANY MORE
+						ACC | BIRLA SUPER  |  RAMCO  |  ZUARI  |  NAGARJUNA  |  PENNA |
+						PRIYA GOLD  |  JAYPEE |  MANY MORE
 					</div>
 				</div>
 				</div>
