minor changes in success funtion

--- a/Landing_Page_cement.html
+++ b/Landing_Page_cement.html
@@ -106,8 +106,8 @@
 			<div class="col-md-5">
 					<div class="well2" style="color:#545454;">
       			<form id="cementForm">
-                <div class="form-group row hide" id="cementMessage" method="post">
-                    <label  class="col-md-12 form-control-label" style="text-align: center; color:#9d44de;">Your request has been submitted.
+                <div class="form-group row" id="cementMessage" method="post" style="display:none;">
+                    <label  class="col-md-12 form-control-label" style="text-align: center; color:#9d44de;" id="msg">Your request has been submitted.
 													 Our representative will contact you soon.</label>
                 </div>
                 <div class="form-group row">
