--- a/Landing_Page_tmt.html
+++ b/Landing_Page_tmt.html
@@ -106,7 +106,7 @@
 			<div class="col-md-5">
 					<div class="well2" style="color:#545454;">
       			<form id="tmtForm">
-                <div class="form-group row hide" id="tmtMessage">
+                <div class="form-group row" id="tmtMessage" style="display:none;">
                     <label  class="col-md-12 form-control-label" style="text-align: center; color:#9d44de;">Your request has been submitted.
 													 Our representative will contact you soon.</label>
                 </div>
